Complite header blocks

--- a/index.html
+++ b/index.html
@@ -6,9 +6,69 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Easy</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Roboto:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <!-- header -->
+  <header class="header">
+    <div class="container">
+      <div class="header__container">
+        <div class="header__logo">
+          <a href="#">
+            <img src="img/svg/Logo.svg" alt="Icon: logo">
+          </a>
+        </div>
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__list-item">
+              <a href="" class="menu__list-link">Домой</a>
+            </li>
+            <li class="menu__list-item ">
+              <a href="" class="menu__list-link">Лэндинги</a>
+              <a href="#" class="menu__btn"><img src="img/svg/angle-down.svg" alt=""></a>
+            </li>
+            <li class="menu__list-item ">
+              <a href="" class="menu__list-link">Страницы</a>
+              <a href="#" class="menu__btn"><img src="img/svg/angle-down.svg" alt=""></a>
+            </li>
+            <li class="menu__list-item">
+              <a href="" class="menu__list-link">Помощь</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="header__button">
+          <a href="#" class="header__btn">Получить</a>
+        </div>
+      </div>
+    </div>
+  </header>
+  <main>
+    <section class="hero">
+      <div class="container">
+        <div class="hero__container">
+            <div class="hero__text">
+            <h1 class="hero__title title">
+              Номер #1,
+              Южная Азия
+              Агенство цифровых продуктов
+            </h1>
+            <p class="hero__subtitle">
+              Мы даем результаты, помогающие Вам добиться экономии средств и времени без риска или накладных расходов на управление
+            </p>
+            <button class="hero__btn">
+              Наше портфолио
+            </button>
+          </div>
+          <div class="hero__images">
+            <img src="img/iphone.jpg" alt="Image: Iphone" class="hero__img">
+            <img src="img/Macbook.png" alt="Image: Macbook" class="hero__img">
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
 
   <script src="js/main.js"></script>
 </body>
